--- a/HopIn/src/app/admin-request-details-container/admin-request-details-container.component.css
+++ b/HopIn/src/app/admin-request-details-container/admin-request-details-container.component.css
@@ -1,47 +1,45 @@
 .request-details-container {
     width: 30.5vw;
-    height: 500px;
+    height: 439px;
     padding: 10px 50px;
     background-color: white;
     display: flex;
     flex-direction: column;
 }
 
-@media screen and (max-width: 1200px){
+.profile-img-container {
+    margin-top: 0;
+}
+
+@media screen and (max-width: 920px){
     .request-details-container{
         height: 600px;
+        margin: 0 !important;
     }
 }
 
-@media screen and (max-width: 1000px) {
-    .request-details-container {
-        display: block;
-    }
-}
-
-@media screen and (max-width: 875px) {
-    .request-details-container {
-        width: 60%;
-    }
+@media screen and (max-width: 450px) {
 }
 
 div > div {
-    margin-top: auto;
     display: flex;
     flex-direction: row;
 }
 
 .decline-request-button {
     margin-left: 35px;
-    margin-bottom: 35px;
     padding: 0px 20px;
     width: 100px;
+    margin-top: 25px;
+    margin-bottom: 10px;
 }
 
 .accept-request-button {
     margin-right: 35px;
-    margin-bottom: 35px;
     margin-left: auto;
     padding: 0px 20px;
     width: 100px;
+    margin-top: 25px;
+    margin-bottom: 10px;
+
 }
