--- a/HopIn/src/app/update-requests-display/update-requests-display.component.css
+++ b/HopIn/src/app/update-requests-display/update-requests-display.component.css
@@ -100,6 +100,7 @@ p {
 }
 
 .request-type-tag {
+    width: 50px;
     display: inline-block;
     height: fit-content;
     font-size: 0.6em;
@@ -110,6 +111,7 @@ p {
     bottom: 5px;
     right: 10px;
     position: absolute;
+    text-align: center;
 }
 
 .selected-request-card {
