styled gray buttons in document popups

--- a/HopIn/src/app/document-details-dialog/document-details-dialog.component.html
+++ b/HopIn/src/app/document-details-dialog/document-details-dialog.component.html
@@ -5,6 +5,6 @@
       <img [src]="data.url" class="dialog-document-img">
     </div>
     <div mat-dialog-actions align="center">
-      <button mat-button (click)="close()">Close</button>
+      <button mat-button class="conf-button" (click)="close()">Close</button>
     </div>
 </div>
