--- a/HopIn/src/app/decline-request-reason-dialog/decline-request-reason-dialog.component.html
+++ b/HopIn/src/app/decline-request-reason-dialog/decline-request-reason-dialog.component.html
@@ -7,6 +7,6 @@
         </mat-form-field>
     </div>
     <div mat-dialog-actions align="center">
-        <button mat-button (click)="declineRequest()">Submit</button>
+        <button mat-button class="conf-button" (click)="declineRequest()">Submit</button>
     </div>
 </div>
