--- a/HopIn/src/app/request-feedback/request-feedback.component.css
+++ b/HopIn/src/app/request-feedback/request-feedback.component.css
@@ -60,7 +60,7 @@ button {
     background-color: #A8201A;
     color: white;
     font-size: 0.6em;
-    padding: 0.3em 1em ;
+    padding: 5px 10px ;
     border-radius: 10px;
     border: 0;
     height: fit-content;
@@ -70,6 +70,7 @@ button {
     margin-left: auto;
     align-items: center;
     width: 90px;
+    margin-bottom: -5px;
 }
 
 
@@ -156,7 +157,7 @@ img {
 
 @media only screen and (max-width: 900px) {
     p {
-        font-size: 0.5em;
+        font-size: 0.8em;
     }
 
     .pendingContainar {
