--- a/HopIn/src/app/update-requests-display/update-requests-display.component.css
+++ b/HopIn/src/app/update-requests-display/update-requests-display.component.css
@@ -58,6 +58,10 @@ p {
     line-height: 1em;
 }
 
+.request-p {
+    margin-left: 10px;
+}
+
 .request-card {
     display: flex;
     background-color: white;
@@ -67,6 +71,12 @@ p {
     align-items: center;
     margin-top: 10px;
     margin-bottom: 5px;
+    min-height: 60px;
+}
+
+.driver-data {
+    display: flex;
+    align-items: center;
 }
 
 .driver-photo {
