--- a/HopIn/src/app/update-request-details/update-request-details.component.html
+++ b/HopIn/src/app/update-request-details/update-request-details.component.html
@@ -8,7 +8,8 @@
         <form [formGroup]="personalInfoForm" fxLayout="column">
             <div style="width: 100%">
                 <div class="profile-img-container">
-                    <img [src]="profileImgPath" class="profile-img">
+                    <!-- [src]="profileImgPath" -->
+                    <img [src]="driverTepPhotoUrl" class="profile-img">
                 </div>
                 <div class="name-form-container">
                     <mat-form-field color="primary" [hideRequiredMarker]="true" id="name">
