--- a/HopIn/src/app/admin-account/admin-account.component.css
+++ b/HopIn/src/app/admin-account/admin-account.component.css
@@ -6,3 +6,7 @@ account-details {
     margin-left: auto;
     margin-right: auto;
 }
+
+account-details .account-container-driver{
+    margin-top: 13vh !important;
+}
