--- a/HopIn/src/app/register/register.component.html
+++ b/HopIn/src/app/register/register.component.html
@@ -7,11 +7,13 @@
         <mat-label>Name</mat-label>
         <input matInput type="text" name="name" formControlName="name" />
         <mat-error *ngIf="registerForm.get('name')?.errors?.['required']">entering name is required</mat-error>
+        <mat-error *ngIf="registerForm.get('name')?.errors?.['nameRegexError'] && !registerForm.get('name')?.errors?.['required']">invalid name format</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Surname</mat-label>
         <input matInput type="text" name="surname" formControlName="surname" />
         <mat-error *ngIf="registerForm.get('surname')?.errors?.['required']">entering surname is required</mat-error>
+        <mat-error *ngIf="registerForm.get('surname')?.errors?.['surnameRegexError'] && !registerForm.get('surname')?.errors?.['required']">invalid surname format</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Email</mat-label>
@@ -23,6 +25,7 @@
         <mat-label>Password</mat-label>
         <input matInput type="password" name="password" formControlName="password" />
         <mat-error *ngIf="registerForm.get('password')?.errors?.['required']">entering password is required</mat-error>
+        <mat-error *ngIf="registerForm.get('password')?.errors?.['passwordRegexError']  && !registerForm.get('password')?.errors?.['required']">incorrect input/min 6 char</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Confirm password</mat-label>
@@ -32,13 +35,15 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>City</mat-label>
-        <input matInput type="text" name="city" formControlName="city" />
-        <mat-error *ngIf="registerForm.get('city')?.errors?.['required']">entering city is required</mat-error>
+        <input matInput type="text" name="address" formControlName="address" />
+        <mat-error *ngIf="registerForm.get('address')?.errors?.['required']">entering city is required</mat-error>
+        <mat-error *ngIf="registerForm.get('address')?.errors?.['addressRegexError'] && !registerForm.get('address')?.errors?.['required']">invalid address format</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Phone number</mat-label>
         <input matInput type="tel" name="phonenum" formControlName="phonenum" />
         <mat-error *ngIf="registerForm.get('phonenum')?.errors?.['required']">entering phone number is required</mat-error>
+        <mat-error *ngIf="registerForm.get('phonenum')?.errors?.['phonenumRegexError'] && !registerForm.get('phonenum')?.errors?.['required']">invalid phone number format</mat-error>
       </mat-form-field>
       <div fxLayout="row" fxLayoutAlign="space-between end">
         <button class="conf-button" type="submit" mat-raised-button>Register</button>
