implemented sending data from sub components to parent component

--- a/HopIn/src/app/driver-register/driver-register.component.html
+++ b/HopIn/src/app/driver-register/driver-register.component.html
@@ -14,12 +14,15 @@
             <div id="vehicle-container" class="border">
                 <app-change-vehicle-info 
                 [parentComponent]="parentComponent"
-                [formsSubmitted]="formsSubmitted"></app-change-vehicle-info>
+                [formsSubmitted]="formsSubmitted"
+                (isFormValid)="changeFormValidity($event)"></app-change-vehicle-info>
             </div>
             <div id="document-container" class="border">
                 <app-driver-documents 
-                [parentComponent]="parentComponent"></app-driver-documents>
+                [parentComponent]="parentComponent"
+                (isFormValid)="changeFormValidity($event)"></app-driver-documents>
             </div>
         </div>
     </div>
 </div>
+<app-snack-bar></app-snack-bar>
