changed previous components and methods for crud operations on documents

--- a/HopIn/src/app/account-update/account-update.component.html
+++ b/HopIn/src/app/account-update/account-update.component.html
@@ -6,5 +6,7 @@
     <app-change-vehicle-info 
     [parentComponent]="parentComponent"
     *ngIf="option == 'vehicle'"></app-change-vehicle-info>
-    <app-driver-documents *ngIf="option == 'documents'"></app-driver-documents>
+    <app-driver-documents 
+    [parentComponent]="parentComponent"
+    *ngIf="option == 'documents'"></app-driver-documents>
 </div>
