--- a/HopIn/src/app/driver-register/driver-register.component.html
+++ b/HopIn/src/app/driver-register/driver-register.component.html
@@ -8,7 +8,7 @@
             <div id="info-container"  class="border">
                 <app-driver-register-personal-info [formsSubmitted]="formsSubmitted"></app-driver-register-personal-info> 
             </div>     
-            <button (click)="save()" class="conf-button" mat-raised-button type="submit">Save</button>
+            <button id="register-driver-btn" (click)="save()" class="conf-button" mat-raised-button type="submit">Register new driver</button>
         </div>
         <div id="right-driver-register-component">
             <div id="vehicle-container" class="border">
