--- a/HopIn/src/app/register/register.component.css
+++ b/HopIn/src/app/register/register.component.css
@@ -13,10 +13,6 @@
     background-color: white;
     border-radius: 10px;
     border: 1px solid #E6E6E6;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 40px !important;
-    margin-bottom: 20px;
     align-items: center;
 }
 
@@ -56,6 +52,7 @@
         display: block;
         width: 85%;
         margin-top: 40px;
+        margin-bottom: 20px !important;
     }
 
     .reg-left {
