adjusted toolbar design for different roles

--- a/HopIn/src/app/toolbar/toolbar.component.html
+++ b/HopIn/src/app/toolbar/toolbar.component.html
@@ -14,10 +14,13 @@
   
       <div class="navbar-menu" id="open-navbar1">
         <div class="navbar-nav">
-            <a *ngIf="role === 'ROLE_PASSENGER'" [routerLink]="['/order-ride']">Home</a>
-            <a *ngIf="role === 'ROLE_PASSENGER'">Account</a>
-            <a *ngIf="role === 'ROLE_PASSENGER'">History</a>
-            <a (click)="logout()" *ngIf="role === 'ROLE_PASSENGER'">Log out</a>
+            <a *ngIf="role != null" [routerLink]="['/order-ride']">Home</a>
+            <a *ngIf="role === 'ROLE_PASSENGER' || role === 'ROLE_DRIVER'">Account</a>
+            <a *ngIf="role === 'ROLE_ADMIN'">Reports</a>
+            <a *ngIf="role === 'ROLE_ADMIN'">Drivers</a>
+            <a *ngIf="role === 'ROLE_ADMIN'">Chat</a>
+            <a *ngIf="role != null">History</a>
+            <a (click)="logout()" *ngIf="role != null">Log out</a>
             <a *ngIf="role === null" [routerLink]="['/login']">Log in</a>
             <a id="signUp" *ngIf="role === null" [routerLink]="['/register']">Sign up</a>  
         </div>
