--- a/HopIn/src/app/toolbar/toolbar.component.html
+++ b/HopIn/src/app/toolbar/toolbar.component.html
@@ -15,7 +15,7 @@
       <div class="navbar-menu" id="open-navbar1">
         <div class="navbar-nav">
             <a *ngIf="role != null" [routerLink]="['/order-ride']">Home</a>
-            <a *ngIf="role === 'ROLE_PASSENGER' || role === 'ROLE_DRIVER'">Account</a>
+            <a (click)="openAccount()" *ngIf="role === 'ROLE_PASSENGER' || role === 'ROLE_DRIVER'">Account</a>
             <a *ngIf="role === 'ROLE_ADMIN'">Reports</a>
             <a *ngIf="role === 'ROLE_ADMIN'">Drivers</a>
             <a *ngIf="role === 'ROLE_ADMIN'">Chat</a>
