--- a/HopIn/src/app/driver-register/driver-register.component.html
+++ b/HopIn/src/app/driver-register/driver-register.component.html
@@ -22,6 +22,7 @@
                 [parentComponent]="parentComponent"
                 (sentDocument)="recieveDocument($event)"></app-driver-documents>
             </div>
+            <button id="register-driver-btn" (click)="save()" class="conf-button" mat-raised-button type="submit">Register new driver</button>
         </div>
     </div>
 </div>
