now fetching data from the logged user for driver requests

--- a/HopIn/src/app/user-graph/user-graph.component.html
+++ b/HopIn/src/app/user-graph/user-graph.component.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div></div>
-            <button id="pdfBtn">Print pdf</button>
+            <button id="pdfBtn">Print PDF</button>
         </div>
         <div class="graph">
             <canvas id="myChart"></canvas>
