--- a/HopIn/src/app/account-details/account-details.component.css
+++ b/HopIn/src/app/account-details/account-details.component.css
@@ -20,7 +20,7 @@
     height: 60vh;
     border: 1px solid #E6E6E6;
     border-radius: 10px;
-    margin-top: 18vh;
+    margin-top: 4vh;
 }
 
 .account-container-admin {
@@ -33,7 +33,7 @@
     height: 60vh;
     border: 1px solid #E6E6E6;
     border-radius: 10px;
-    margin-top: 10vh;}
+}
 
 
 img {
