--- a/HopIn/src/app/driver-account/driver-account.component.css
+++ b/HopIn/src/app/driver-account/driver-account.component.css
@@ -10,9 +10,27 @@
     flex-direction: column;
 }
 
+#update-request-div {
+    margin-top: 10px;
+    padding: 17px 25px;
+    text-align: center;
+    width: 20vw;
+    background-color: white;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: #383838;
+}
+
 @media screen and (max-width: 900px) {
     .row {
         flex-direction: column;
         align-items: center;
+    }
+
+    #update-request-div {
+        width: 55vw;
     }
 }
