--- a/HopIn/src/app/driver-account/driver-account.component.html
+++ b/HopIn/src/app/driver-account/driver-account.component.html
@@ -1,6 +1,9 @@
 <div class="win">
     <div class="row">
-        <account-details></account-details>
+        <div>
+            <account-details></account-details>
+            <a [routerLink]="['/request-dashboard']"><div id="update-request-div" class="border">Account update requests</div></a>
+        </div>
         <user-graph></user-graph>
     </div>
     <div></div>
