--- a/HopIn/src/app/request-feedback/request-feedback.component.html
+++ b/HopIn/src/app/request-feedback/request-feedback.component.html
@@ -11,9 +11,9 @@
         <div class="left">
             <div class="row firstRow">
                 <img [src]="url" alt="">
-                <p id="name">{{ role == 'admin'? "You": admin }}</p>
+                <p id="name">{{ role.toLowerCase() == 'role_admin'? "You": admin }}</p>
                 <p id="declinedP">&nbsp;declined&nbsp;</p>
-                <p>{{ role == 'admin'? "the": "your" }} request</p>
+                <p>{{ role.toLowerCase() == 'role_admin'? "the": "your" }} request</p>
             </div>
             <p id="reasonTitle">Reason:</p>
             <div id="reasonContent">
@@ -28,9 +28,9 @@
     <div class="acceptedContianer" *ngIf="status === 'ACCEPTED'">
         <div class="row firstRow">
             <img [src]="url" alt="">
-            <p id="name">{{ role == 'admin'? "You": admin }}</p>
+            <p id="name">{{ role.toLowerCase() == 'role_admin'? "You": admin }}</p>
             <p id="acceptedP">&nbsp;accepted&nbsp;</p>
-            <p>{{ role == 'admin'? "the": "your" }} request</p>
+            <p>{{ role.toLowerCase() == 'role_admin'? "the": "your" }} request</p>
         </div>
         <div class="right">
             <p id="date">{{this.date}}</p>
