--- a/HopIn/src/app/update-requests-display/update-requests-display.component.html
+++ b/HopIn/src/app/update-requests-display/update-requests-display.component.html
@@ -1,7 +1,7 @@
-<div id="requests-container" class="border" [ngClass]="this._role === 'driver' ? 'height': ''">
+<div id="requests-container" class="border" [ngClass]="this._role.toLowerCase() == 'role_driver' ? 'height': ''">
     <div id="requests-header">
-        <h3 *ngIf="this._role === 'admin'" class="title dark-blue">Driver account update requests</h3>
-        <h3 *ngIf="this._role === 'driver'" class="title dark-blue">Account update requests</h3>
+        <h3 *ngIf="this._role.toLowerCase() == 'role_admin'" class="title dark-blue">Driver account update requests</h3>
+        <h3 *ngIf="this._role.toLowerCase() == 'role_driver'" class="title dark-blue">Account update requests</h3>
         <div id="header-buttons">
             <div class="header-button" [ngClass]="currentOption == 'pending'? 'selected-header-button': ''" (click)="chooseOption('pending')">
                 pending
@@ -13,7 +13,7 @@
     </div>
     <div id="request-cards">
         <div class="request-card" *ngFor="let request of requests" [ngClass]="{'selected-request-card': selectedRequestId == request.id, 'accepted-request': request.status == 'ACCEPTED', 'denied-request': request.status == 'DENIED'}" (click)="selectRequest(request)">
-            <div class="driver-data" *ngIf="_role == 'admin'">
+            <div class="driver-data" *ngIf="_role.toLowerCase() == 'role_admin'">
                 <!--[src]= "request.driver.profilePicture" -->
                 <img [src]="driverTepPhotoUrl" class="driver-photo">
                 <div class="driver-info">
@@ -25,7 +25,7 @@
             </div> 
             </div>
             
-            <p class="driver-name dark-blue request-p" *ngIf="_role == 'driver'">Request</p>
+            <p class="driver-name dark-blue request-p" *ngIf="_role.toLowerCase() == 'driver'">Request</p>
             <p class="request-time dark-gray">
                 {{ formatDate(request.time) }}
             </p>
