--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div style="height: 100%;">
   <toolbar></toolbar>
   <div id="content">
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
+    <order-ride></order-ride>
     <!-- <driver-request-dashboard></driver-request-dashboard> -->
   </div>
 </div>
