--- a/HopIn/src/app/order-ride/order-ride.component.html
+++ b/HopIn/src/app/order-ride/order-ride.component.html
@@ -1,3 +1,9 @@
 <!-- <ng-container *ngComponentOutlet="currentComponent"></ng-container> -->
-<pickup-destination-form></pickup-destination-form>
+<mat-horizontal-stepper>
+    <mat-step label="Pickup and destination">
+        <pickup-destination-form></pickup-destination-form>
+    </mat-step>
+    <mat-step label="Vehicle preferences"></mat-step>
+    <mat-step label="Linking friends"></mat-step>
+</mat-horizontal-stepper>
 <vehicles-map></vehicles-map>
