--- a/HopIn/src/app/order-ride/order-ride.component.html
+++ b/HopIn/src/app/order-ride/order-ride.component.html
@@ -3,7 +3,11 @@
     <mat-step label="Pickup and destination">
         <pickup-destination-form></pickup-destination-form>
     </mat-step>
-    <mat-step label="Vehicle preferences"></mat-step>
-    <mat-step label="Linking friends"></mat-step>
+    <mat-step label="Vehicle preferences">
+        <vehicle-preferences-form></vehicle-preferences-form>
+    </mat-step>
+    <mat-step label="Linking friends">
+
+    </mat-step>
 </mat-horizontal-stepper>
-<vehicles-map></vehicles-map>
+<!-- <vehicles-map></vehicles-map> -->
