--- a/HopIn/src/app/vehicle-preferences-form/vehicle-preferences-form.component.html
+++ b/HopIn/src/app/vehicle-preferences-form/vehicle-preferences-form.component.html
@@ -26,5 +26,10 @@
                 <span>vehicle for pets</span>
             </button>
         </div>
+        <div id="buttons-container">
+            <button id="order-ride-btn" class="conf-button" mat-raised-button type="button" (click)="orderRide()" >order ride</button>
+            <button id="next-step-btn" class="conf-button" mat-raised-button type="button" (click)="nextStep()" >next -></button>
+        </div>
+        
     </form>
 </div>
