--- a/HopIn/src/app/order-ride/order-ride.component.html
+++ b/HopIn/src/app/order-ride/order-ride.component.html
@@ -1,12 +1,12 @@
 <!-- <ng-container *ngComponentOutlet="currentComponent"></ng-container> -->
-<mat-horizontal-stepper>
+<mat-horizontal-stepper [@.disabled]="true"  #stepper linear>
     <mat-step label="Pickup and destination">
-        <pickup-destination-form></pickup-destination-form>
+        <pickup-destination-form [stepper]="stepper"></pickup-destination-form>
     </mat-step>
-    <mat-step label="Vehicle preferences">
-        <vehicle-preferences-form></vehicle-preferences-form>
+    <mat-step label="Vehicle preferences" >
+        <vehicle-preferences-form [stepper]="stepper"></vehicle-preferences-form>
     </mat-step>
-    <mat-step label="Linking friends">
+    <mat-step label="Linking friends" [editable]="false">
 
     </mat-step>
 </mat-horizontal-stepper>
