--- a/HopIn/src/app/pickup-destination-form/pickup-destination-form.component.html
+++ b/HopIn/src/app/pickup-destination-form/pickup-destination-form.component.html
@@ -25,7 +25,8 @@
                 <mat-error *ngIf="rideForm.get('time')?.errors?.['timeNotAlowed']">schedule max 5h in advance</mat-error>
             </mat-form-field>
         </div>
-        <button id="find-route-btn" class="conf-button" mat-raised-button type="submit">find route -></button>
-    
+        <button id="find-route-btn" class="conf-button" mat-raised-button type="submit" *ngIf="role === 'ROLE_ANONYMUS'">find route -></button>    
+        <!-- *ngIf="role === 'ROLE_PASSENGER'" -->
+        <button id="next-step-btn" class="conf-button" mat-raised-button type="button" (click)="nextStep()" >next -></button>    
     </form>
 </div>
