added calling back createRide function to route service

--- a/HopIn/src/app/route-suggestion/route-suggestion.component.html
+++ b/HopIn/src/app/route-suggestion/route-suggestion.component.html
@@ -8,7 +8,7 @@
             <div class="content-container">
                 <div>
                     <p class="dark-blue small-title" >Pick up location:</p>
-                    <p id="pickup-location" class="card-content">{{ route.pickup.formatted }}</p>
+                    <p id="pickup-location" class="card-content">{{ route.pickup.address }}</p>
                 </div>
             </div>
         </div>
@@ -19,7 +19,7 @@
             <div class="content-container">
                 <div>
                     <p class="dark-blue small-title" >Destination:</p>
-                    <p id="destination-location" class="card-content">{{ route.destination.formatted }}</p>
+                    <p id="destination-location" class="card-content">{{ route.destination.address }}</p>
                 </div>
             </div>
         </div>
