--- a/HopIn/src/app/order-ride/order-ride.component.css
+++ b/HopIn/src/app/order-ride/order-ride.component.css
@@ -8,6 +8,8 @@
     left: -50%;
 }
 
+/* STYLING STEPPER */
+
 ::ng-deep mat-horizontal-stepper {
     width: 50%;
     position: absolute;
@@ -17,7 +19,6 @@
     background-color: black;
     
 }
-
 
 ::ng-deep .mat-horizontal-content-container {
     padding: 0 !important;
@@ -33,6 +34,7 @@
 ::ng-deep .mat-step-header .mat-step-label {
     color: white;
 }
+
 ::ng-deep .mat-step-header .mat-step-label.mat-step-label-active {
     color: white;
 }
@@ -40,12 +42,15 @@
 ::ng-deep .mat-step-header .mat-step-icon-selected, .mat-step-header .mat-step-icon-state-done, .mat-step-header .mat-step-icon-state-edit {
     background-color: #EC9A29 !important;
 }
+
 ::ng-deep .mat-step-header .mat-step-icon-state-edit {
     background-color: #EC9A29 !important;
 }
+
 ::ng-deep .mat-step-header .mat-step-icon-state-done {
     background-color: #EC9A29 !important;
 }
+
 ::ng-deep .mat-stepper-horizontal-line {
     border-top-color: white !important;
 }
@@ -55,10 +60,29 @@
     color: black;
 }
 
+@media screen and (max-width: 1200px) {
+    ::ng-deep mat-horizontal-stepper {
+        width: 70%;
+        left: 15%;
+    }
+
+    ::ng-deep pickup-destination-form, vehicle-preferences-form {
+        left: -20%;
+    }
+}
 
 
-@media screen and (max-width: 700px) {
-    pickup-destination-form {
+@media screen and (max-width: 1000px) {
+    ::ng-deep mat-horizontal-stepper {
+        width: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 40;
+        background-color: black;
+    }
+
+    ::ng-deep pickup-destination-form, vehicle-preferences-form {
         display: block;
         left: 0; 
         right: 0; 
@@ -67,12 +91,35 @@
     }
 }
 
+@media screen and (max-width: 600px) {
+    ::ng-deep .mat-step-text-label {
+        display: none;
+    }
+    ::ng-deep  .mat-step-label {
+        min-width: 0px !important;
+    }
+
+
+}
+
 @media screen and (max-width: 420px) {
-    pickup-destination-form {
+    ::ng-deep  pickup-destination-form {
         margin-top: 0;
         width: 100%;
         position: relative;
-        height: 300px;
+        height: 305px;
+    }
+
+    ::ng-deep vehicle-preferences-form {
+        margin-top: 0;
+        width: 100%;
+        position: relative;
+        height: 100%;
+        z-index: 40;
+    }
+
+    ::ng-deep .conf-button {
+        margin-top: 15px !important;
     }
 
     ::ng-deep .border {
@@ -80,7 +127,7 @@
     }
 
     ::ng-deep #tell-us {
-        margin-top: 10px !important;
+        margin-top: 15px !important;
     }
 
     ::ng-deep #unreg-ride-container {
