added proper routing and returned appmodule html to router component

--- a/HopIn/src/app/app.component.html
+++ b/HopIn/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div style="height: 100%;">
   <toolbar></toolbar>
   <div id="content">
-    <!-- <router-outlet></router-outlet> -->
-    <order-ride></order-ride>
-    <!-- <driver-request-dashboard></driver-request-dashboard> -->
+    <router-outlet></router-outlet>
   </div>
 </div>
