--- a/HopIn/src/app/order-ride/order-ride.component.html
+++ b/HopIn/src/app/order-ride/order-ride.component.html
@@ -7,7 +7,7 @@
         <vehicle-preferences-form [stepper]="stepper" ></vehicle-preferences-form>
     </mat-step>
     <mat-step label="Linking friends" [editable]="false">
-
+        <invite-friends-form></invite-friends-form>
     </mat-step>
 </mat-horizontal-stepper>
-<vehicles-map></vehicles-map>
+<!-- <vehicles-map></vehicles-map> -->
