--- a/HopIn/src/app/invite-friends-form/invite-friends-form.component.html
+++ b/HopIn/src/app/invite-friends-form/invite-friends-form.component.html
@@ -14,15 +14,16 @@
             </div>
         </form>
     </div>
-    <div id="added-friends">
+    <div id="added-friends" [ngClass]="hasOthers? 'display': ''">
         <h4 class="dark-blue">Invites will be sent to:</h4>
-        <div id="invited-cards-cont">
-            <div class="invited-card border">
-                <img src="../../assets/images/driver.jpg" class="passenger-photo">
-                <p>Lia Tompson</p>
-                <mat-icon (click)="removePassenger()" class="exit-btn">add</mat-icon>
+        <div id="invited-cards-cont" >
+            <div class="invited-card border" *ngFor="let passenger of passengers; let i = index;">
+                <img src="{{ passenger.profilePicture == null? '../../../../assets/images/profile-placeholder.png': passenger.profilePicture }}" class="passenger-photo">
+                <p>{{passenger.name + " " + passenger.surname}}</p>
+                <mat-icon (click)="removePassenger(i)" class="exit-btn">add</mat-icon>
             </div>
         </div>
     </div>
     <button id="order-ride-btn" class="conf-button" mat-raised-button type="button" (click)="orderRide()" >order ride</button>
 </div>
+<app-snack-bar></app-snack-bar>
