added toggle button on navbar for user active mode

--- a/HopIn/src/app/toolbar/toolbar.component.html
+++ b/HopIn/src/app/toolbar/toolbar.component.html
@@ -5,11 +5,13 @@
                 HopIn
             </a>
 
-            <button class="navbar-toggler" data-toggle="open-navbar1">
+            <!-- <button class="navbar-toggler" data-toggle="open-navbar1">
                     <div></div>
                     <div></div>
                     <div></div>
-            </button>
+            </button> -->
+            <mat-slide-toggle *ngIf="role === 'ROLE_DRIVER'" [(ngModel)]="checked" (change)="toggleChange()">
+            </mat-slide-toggle>
         </div>  
   
       <div class="navbar-menu" id="open-navbar1">
