--- a/HopIn/src/app/toolbar/toolbar.component.css
+++ b/HopIn/src/app/toolbar/toolbar.component.css
@@ -121,7 +121,13 @@ a {
 
 /* TOGGLE BUTTON */
 
+:host ::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+    background-color: #77BF6C ;
+}
 
+:host ::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb  {
+    background-color: #29C325 ;
+}
 
 
 
