--- a/HopIn/src/app/invite-friends-form/invite-friends-form.component.html
+++ b/HopIn/src/app/invite-friends-form/invite-friends-form.component.html
@@ -25,5 +25,6 @@
         </div>
     </div>
     <button id="order-ride-btn" class="conf-button" mat-raised-button type="button" (click)="orderRide()" >order ride</button>
+    <button id="send-invites-btn" class="conf-button" mat-raised-button type="button" (click)="sendInvites()" >send invites</button>
 </div>
 <app-snack-bar></app-snack-bar>
