--- a/HopIn/src/app/invite-dialog/invite-dialog.component.html
+++ b/HopIn/src/app/invite-dialog/invite-dialog.component.html
@@ -1,1 +1,12 @@
-<p>invite-dialog works!</p>
+<div>
+    <h1 mat-dialog-title align="center" class="dark-blue">{{"Ride Invitation from " + data.invite.from.name}}</h1>
+  
+      <div mat-dialog-content align="center">
+        <!-- <p>{{"from: " + data.invite.ride.locations[0].address}}</p>
+        <p>{{"to: " + data.invite.ride.locations[1].address}}</p> -->
+      </div>
+      <div mat-dialog-actions align="center">
+        <button mat-button class="conf-button back-red" (click)="declineInvitation()">Decline</button>
+        <button mat-button class="conf-button back-green" (click)="acceptInvitation()">Accept</button>
+      </div>
+</div>
