--- a/HopIn/src/app/invite-friends-form/invite-friends-form.component.css
+++ b/HopIn/src/app/invite-friends-form/invite-friends-form.component.css
@@ -37,6 +37,10 @@
     overflow: auto;
 }
 
+.disabled-form {
+    opacity: 0.5 !important;
+}
+
 h3, h4 {
     margin: 0;
 }
@@ -47,11 +51,14 @@ h3, h4 {
 
 .exit-btn {
     transform: rotate(45deg);
-    color: #92989B;
     font-weight: 700;
+    cursor: pointer;
+}
+
+.card-btn {
     position: absolute;
     right: 7px;
-    cursor: pointer;
+    color: #92989B;
 }
 
 #added-friends {
