--- a/HopIn/src/app/invite-friends-form/invite-friends-form.component.html
+++ b/HopIn/src/app/invite-friends-form/invite-friends-form.component.html
@@ -1,6 +1,6 @@
 <div id="invite-container" class="border">
     <h3 id="tell-us" class="dark-blue">Anyone else riding with you?</h3>
-    <div id="enter-email">
+    <div id="enter-email" *ngIf="!invitationSent">
         <form [formGroup]="inviteForm">
             <div class="email-input-cont">
                 <mat-form-field id="friends-email-input">
@@ -10,21 +10,25 @@
                     <mat-error *ngIf="inviteForm.get('email')?.errors?.['required']">entering email is required</mat-error>
                     <mat-error *ngIf="inviteForm.get('email')?.errors?.['email']">invalid email format</mat-error>
                 </mat-form-field>
-                <mat-icon (click)="addPassenger()" class="add-button">add_circle_outline</mat-icon>
+                <mat-icon (click)="addPassenger()" class="add-button" >add_circle_outline</mat-icon>
             </div>
         </form>
     </div>
-    <div id="added-friends" [ngClass]="hasOthers? 'display': ''">
-        <h4 class="dark-blue">Invites will be sent to:</h4>
+    <div id="added-friends" [ngClass]="hasOthers? 'display': ''"  *ngIf="passengersInvited.length > 0">
+        <h4 class="dark-blue" *ngIf="!invitationSent">Invites will be sent to:</h4>
+        <h4 class="dark-blue" *ngIf="invitationSent">Invites responses:</h4>
         <div id="invited-cards-cont" >
-            <div class="invited-card border" *ngFor="let passenger of passengers; let i = index;">
+            <div class="invited-card border" *ngFor="let passenger of passengersInvited; let i = index;">
                 <img src="{{ passenger.profilePicture == null? '../../../../assets/images/profile-placeholder.png': passenger.profilePicture }}" class="passenger-photo">
                 <p>{{passenger.name + " " + passenger.surname}}</p>
-                <mat-icon (click)="removePassenger(i)" class="exit-btn">add</mat-icon>
+                <mat-icon (click)="removePassenger(i)" class="exit-btn card-btn" *ngIf="!invitationSent">add</mat-icon>
+                <mat-icon class="card-btn red" *ngIf="invitationSent && invitationResponses[i] == false">cancel</mat-icon>
+                <mat-icon class="card-btn" *ngIf="invitationSent && invitationResponses[i] == null">access_time</mat-icon>
+                <mat-icon class="card-btn green" *ngIf="invitationSent && invitationResponses[i] == true">check_circle</mat-icon>
             </div>
         </div>
     </div>
     <button id="order-ride-btn" class="conf-button" mat-raised-button type="button" (click)="orderRide()" >order ride</button>
-    <button id="send-invites-btn" class="conf-button" mat-raised-button type="button" (click)="sendInvites()" >send invites</button>
+    <button id="send-invites-btn" class="conf-button" mat-raised-button type="button" (click)="sendInvites()" *ngIf="!invitationSent && passengersInvited.length > 0">send invites</button>
 </div>
 <app-snack-bar></app-snack-bar>
