--- a/HopIn/src/app/invite-friends-form/invite-friends-form.component.css
+++ b/HopIn/src/app/invite-friends-form/invite-friends-form.component.css
@@ -1,4 +1,4 @@
-#invite-container {
+.invite-container {
     height: fit-content;
     width: 350px;
     background-color: white;
@@ -76,9 +76,6 @@ h4 {
     margin-top: 30px;
 }
 
-form {
-
-}
 
 .display {
     display: block !important;
