--- a/HopIn/src/app/invite-friends-form/invite-friends-form.component.html
+++ b/HopIn/src/app/invite-friends-form/invite-friends-form.component.html
@@ -1,4 +1,4 @@
-<div id="invite-container" class="border">
+<div class="invite-container border">
     <h3 id="tell-us" class="dark-blue">Anyone else riding with you?</h3>
     <div id="enter-email" *ngIf="!invitationSent">
         <form [formGroup]="inviteForm">
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <button id="order-ride-btn" class="conf-button" mat-raised-button type="button" (click)="orderRide()" >order ride</button>
-    <button id="send-invites-btn" class="conf-button" mat-raised-button type="button" (click)="sendInvites()" *ngIf="!invitationSent && passengersInvited.length > 0">send invites</button>
+    <button id="order-ride-btn" class="conf-button" mat-raised-button type="button" (click)="populateRide('order')" >order ride</button>
+    <button id="send-invites-btn" class="conf-button" mat-raised-button type="button" (click)="populateRide('invites')" *ngIf="!invitationSent && passengersInvited.length > 0">send invites</button>
 </div>
 <app-snack-bar></app-snack-bar>
